# SequenceAligner

./: .clang-format  .clangd  .editorconfig  .gitattributes  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  CMakePresets.json  Makefile  NMakefile  README.md  TODO.md  main.py  setup.py  vcpkg-configuration.json  vcpkg.json
.github/workflows/: codeql.yml  controller.yml  sync.yml  test.yml
cmake/: compile_commands.cmake  cross_toolchain.cmake
code/cuda/c_binding/: host_interface.h  host_types.h
code/cuda/c_bindings/: host_interface.h  host_types.h
code/cuda/include/: cuda_manager.cuh
code/cuda/src/: cuda_kernels.cu  cuda_manager.cu  host_interface.cu
code/include/: arch.h  args.h  benchmark.h  biotypes.h  csv.h  files.h  filtering.h  fstring.h  matrices.h  print.h  scoring.h  seqalign.h  seqalign_cuda.h  seqalign_hdf5.h  sequences.h  thread.h
code/include/app/: args.h
code/include/bio/: types.h
code/include/bio/algorithm/: alignment.cuh  alignment.h  indices.h  matrix.h
code/include/bio/algorithm/global/: affine.h  linear.h
code/include/bio/algorithm/local/: affine.h
code/include/bio/algorithm/method/: ga.h  nw.h  sw.h
code/include/bio/score/: matrices.h  scoring.h
code/include/bio/sequence/: filtering.h  sequences.h
code/include/core/app/: args.h  thread.h
code/include/core/bio/: types.h
code/include/core/bio/algorithm/: alignment.h  indices.h  matrix.h
code/include/core/bio/score/: matrices.h  scoring.h
code/include/core/bio/sequence/: filtering.h  sequences.h
code/include/core/biology/: types.h
code/include/core/biology/algorithm/: alignment.h  indices.h  matrix.h
code/include/core/biology/score/: matrices.h  scoring.h
code/include/core/biology/sequence/: filtering.h  sequences.h
code/include/core/interface/: seqalign_cuda.h  seqalign_hdf5.h
code/include/core/io/: files.h
code/include/core/io/format/: csv.h  fasta.h
code/include/interface/: seqalign_cuda.h  seqalign_hdf5.h
code/include/io/: files.h  input.h  mmap.h
code/include/io/format/: csv.h  dsv.h  fasta.h
code/include/system/: arch.h  compiler.h  memory.h  os.h  simd.h  types.h
code/include/util/: args.h  benchmark.h  fstring.h  print.h  progress.h
code/src/: args.c  benchmark.c  biotypes.c  csv.c  files.c  filtering.c  main.c  matrices.c  print.c  scoring.c  seqalign_hdf5.c  sequences.c
code/src/app/: args.c
code/src/bio/: types.c
code/src/bio/algorithm/: alignment.c  alignment.cu  indices.c  matrix.c
code/src/bio/algorithm/global/: affine.c  linear.c
code/src/bio/algorithm/local/: affine.c
code/src/bio/algorithm/method/: ga.c  nw.c  sw.c
code/src/bio/score/: matrices.c  scoring.c
code/src/bio/sequence/: filtering.c  sequences.c
code/src/core/app/: args.c
code/src/core/bio/: types.c
code/src/core/bio/algorithm/: alignment.c  indices.c  matrix.c
code/src/core/bio/score/: matrices.c  scoring.c
code/src/core/bio/sequence/: filtering.c  sequences.c
code/src/core/biology/: types.c
code/src/core/biology/algorithm/: alignment.c  indices.c  matrix.c
code/src/core/biology/score/: matrices.c  scoring.c
code/src/core/biology/sequence/: filtering.c  (+1 more)
code/src/core/interface/: seqalign_cuda.c  seqalign_hdf5.c
code/src/core/io/: files.c
code/src/interface/: seqalign_cuda.c  seqalign_hdf5.c
code/src/io/: files.c  input.c  mmap.c
code/src/io/format/: csv.c  dsv.c  fasta.c
code/src/system/: arch.c  memory.c  os.c  simd.c
code/src/util/: args.c  benchmark.c  print.c  progress.c
config/: default_config.yaml
datasets/: celegans.csv  drosophila.csv  mouse.csv
include/: align.h  align_ga.h  align_nw.h  align_sw.h  arch.h  args.h  benchmark.h  biotypes.h  common.h  csv.h  files.h  fstring.h  h5_handler.h  hdf5_context.h  macros.h  matrices.h  methods.h  print.h  scoring.h  seqalign.h  seqalign_hdf5.h  sequence.h  sequences.h  terminal.h  thread.h  types.h  user.h
include/bio/: alignment.h  kernels.cuh  sequence.h  sequences.h  types.h
include/bio/algorithm/: alignment.cuh  alignment.h  matrix.h
include/bio/algorithm/local/: affine.h
include/bio/algorithm/method/: ga.h  nw.h  sw.h
include/bio/score/: matrices.h
include/bio/sequence/: filtering.h  sequences.h
include/interface/: seqalign_cuda.h  seqalign_hdf5.h
include/io/: input.h  input.hpp  mmap.h  output.h
include/io/format/: dsv.h  fasta.h
include/system/: compiler.h  memory.h  os.h  simd.h  types.h
include/util/: benchmark.h  macros.h
results/: analysis_results.h5  analysis_results.json  analysis_summary.json  large_data.h5
script/: .remakerc  benchmark.py  build.sh  build_all.bat  build_all.sh  build_all_cross.sh  create_mega_dataset.py  format.py  format.sh  generate_matrices.py  tinycthread-mingw.patch  toolchain-mingw.cmake
scripts/: .remakerc  benchmark.py  build_system.py  check_cross.sh  check_hdf5.sh  check_msys2.sh  copy_dlls.sh  create_mega_dataset.py  format.py  format.sh  generate_matrices.py  hdf5_compare_matrices.py  msys2_setup.sh  seqalign_parasail.py
src/: __init__.py  args.c  benchmark.c  biotypes.c  main.c  print.c  scoring.c  seqalign_hdf5.c  sequences.c
src/analysis/: __init__.py  clustering.py  engine.py  ml.py  similarity.py  statistics.py
src/bio/: align.c  align.h  alignment.h  filter.c  kernels.cu  kernels.cuh  matrices.c  types.c
src/bio/algorithm/: alignment.c  alignment.cu  indices.c  matrix.c
src/bio/algorithm/global/: linear.c
src/bio/algorithm/method/: ga.c  nw.c  sw.c
src/bio/method/: ga.c  nw.c  sw.c
src/bio/score/: matrices.c
src/bio/sequence/: filtering.c  sequences.c
src/core/: __init__.py  config.py  data_manager.py  results.py  sequence.py
src/interface/: seqalign_cuda.c  seqalign_cuda.h  seqalign_hdf5.c
src/io/: input.c  input.cpp  input.h  input.hpp  mmap.c  output.c  output.h  source.h
src/io/format/: dsv.c  dsv.cpp  fasta.c  fasta.cpp  hdf5.c
src/io/source/: dsv.c  fasta.c
src/system/: memory.c  os.c  os.h  simd.c  types.h
src/util/: args.c  benchmark.c  macros.h  print.c  progress.c
src/utils/: __init__.py  io.py  parallel.py
src/visualization/: visualizer.py
(+30 files in other folders)
